@@ -8,6 +8,10 @@ cdebconf (0.92) UNRELEASED; urgency=low
   [ Frans Pop ]
   * Add Standards-Version: back in; cdebconf also provides regular packages.
 
+  [ Tollef Fog Heen ]
+  * Move get_text common function from the text and newt frontend to
+    question.h, likewise for convenience macros to question.h
+  
  -- Attilio Fiandrotti <fiandro@tiscali.it>  Sun,  4 Dec 2005 22:44:49 +0100
 
 cdebconf (0.91) unstable; urgency=low
